--- a/static/index.html
+++ b/static/index.html
@@ -3,9 +3,65 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+      integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
+      crossorigin="anonymous"
+    />
+    <link
+      href="https://unpkg.com/filepond/dist/filepond.css"
+      rel="stylesheet"
+    />
+    <script src="https://unpkg.com/filepond/dist/filepond.js"></script>
+
+    <script defer src="./app.js"></script>
+    <style>
+      main {
+        width: calc(300px + 15vw) !important;
+      }
+
+      dl {
+        font-size: 0.9rem;
+      }
+    </style>
     <title>E-commerce Admin</title>
   </head>
   <body>
-    This is the admin site.
+    <main class="container mt-4">
+      <div class="row mb-4">
+        <form id="new-product" class="col-12 text-right">
+          <div class="input-group input-group-sm mb-2">
+            <div class="input-group-prepend">
+              <label for="name" class="input-group-text">商品名稱</span>
+            </div>
+            <input id="name" name="name" type="text" class="col-12 form-control text-right" required />
+          </div>
+          <div class="input-group input-group-sm mb-2">
+            <div class="input-group-prepend">
+              <label for="price" class="input-group-text">價格</span>
+            </div>
+            <div class="input-group-prepend">
+              <span class="input-group-text">$</span>
+            </div>
+            <input id="price" name="price" type="number" min="1" class="col-12 form-control text-right" required />
+            <div class="input-group-append">
+              <span class="input-group-text">元</span>
+            </div>
+            <div class="input-group-append">
+              <span class="input-group-text">新台幣</span>
+            </div>
+          </div>
+          <div class="input-group input-group-sm mb-2">
+            <div class="input-group-prepend">
+              <label for="category" class="input-group-text">商品種類</span>
+            </div>
+            <select name="category" id="category" class="custom-select text-right" required></select>
+          </div>
+          <button type="submit" class="btn btn-primary btn-sm">新增</button>
+        </form>
+      </div>
+      <div class="row __products"></div>
+    </main>
   </body>
 </html>
