--- a/static/index.html
+++ b/static/index.html
@@ -17,8 +17,8 @@
 
     <script defer src="./app.js"></script>
     <style>
-      main {
-        width: calc(300px + 15vw) !important;
+      #new-product {
+        max-width: calc(300px + 15vw) !important;
       }
 
       dl {
@@ -29,7 +29,7 @@
   </head>
   <body>
     <main class="container mt-4">
-      <div class="row mb-4">
+      <div class="row mb-4 justify-content-center">
         <form id="new-product" class="col-12 text-right">
           <div class="input-group input-group-sm mb-2">
             <div class="input-group-prepend">
