Added feature to upload product images as base64

--- a/static/index.html
+++ b/static/index.html
@@ -58,6 +58,15 @@
             </div>
             <select name="category" id="category" class="custom-select text-right" required></select>
           </div>
+          <div class="input-group input-group-sm mb-3 text-left">
+            <div class="input-group-prepend">
+              <span class="input-group-text">商品圖片</span>
+            </div>
+            <div class="custom-file">
+              <input type="file" accept=".jpg,.png" class="custom-file-input" id="image" >
+              <label class="custom-file-label" for="image">選擇⋯</label>
+            </div>
+          </div>
           <button type="submit" class="btn btn-primary btn-sm">新增</button>
         </form>
       </div>
