--- a/static/index.html
+++ b/static/index.html
@@ -67,6 +67,7 @@
               <label class="custom-file-label" for="image">選擇⋯</label>
             </div>
           </div>
+          <button type="reset" class="btn btn-secondary btn-sm">重設</button>
           <button type="submit" class="btn btn-primary btn-sm">新增</button>
         </form>
       </div>
