--- a/static/index.html
+++ b/static/index.html
@@ -1,68 +1,70 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
-      integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
-      crossorigin="anonymous"
-    />
-    <link
-      href="https://unpkg.com/filepond/dist/filepond.css"
-      rel="stylesheet"
-    />
-    <script src="https://unpkg.com/filepond/dist/filepond.js"></script>
 
-    <script defer src="./app.js"></script>
-    <style>
-      #new-product {
-        max-width: calc(300px + 15vw) !important;
-      }
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+    integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous" />
+  <script defer src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+    crossorigin="anonymous"></script>
+  <script defer src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+    integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+    crossorigin="anonymous"></script>
+  <script defer src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
+    integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
+    crossorigin="anonymous"></script>
+  <script defer src="./app.js"></script>
+  <style>
+    #new-product {
+      max-width: calc(300px + 15vw) !important;
+    }
 
-      dl {
-        font-size: 0.9rem;
-      }
-    </style>
-    <title>E-commerce Admin</title>
-  </head>
-  <body>
-    <main class="container mt-4">
-      <div class="row mb-4 justify-content-center">
-        <form id="new-product" class="col-12 text-right">
-          <div class="input-group input-group-sm mb-2">
-            <div class="input-group-prepend">
-              <label for="name" class="input-group-text">商品名稱</span>
-            </div>
-            <input id="name" name="name" type="text" class="col-12 form-control text-right" required />
+    dl {
+      font-size: 0.9rem;
+    }
+  </style>
+  <title>E-commerce Admin</title>
+</head>
+
+<body>
+  <main class="container mt-4">
+    <div class="row mb-4 justify-content-center">
+      <form id="new-product" class="col-12 text-right">
+        <div class="input-group input-group-sm mb-2">
+          <div class="input-group-prepend">
+            <label for="name" class="input-group-text">商品名稱</span>
           </div>
-          <div class="input-group input-group-sm mb-2">
-            <div class="input-group-prepend">
-              <label for="price" class="input-group-text">價格</span>
-            </div>
-            <div class="input-group-prepend">
-              <span class="input-group-text">$</span>
-            </div>
-            <input id="price" name="price" type="number" min="1" class="col-12 form-control text-right" required />
-            <div class="input-group-append">
-              <span class="input-group-text">元</span>
-            </div>
-            <div class="input-group-append">
-              <span class="input-group-text">新台幣</span>
-            </div>
+          <input id="name" name="name" type="text" class="col-12 form-control text-right" required />
+        </div>
+        <div class="input-group input-group-sm mb-2">
+          <div class="input-group-prepend">
+            <label for="price" class="input-group-text">價格</span>
           </div>
-          <div class="input-group input-group-sm mb-2">
-            <div class="input-group-prepend">
-              <label for="category" class="input-group-text">商品種類</span>
-            </div>
-            <select name="category" id="category" class="custom-select text-right" required></select>
+          <div class="input-group-prepend">
+            <span class="input-group-text">$</span>
           </div>
-          <button type="reset" class="btn btn-secondary btn-sm">重設</button>
-          <button type="submit" class="btn btn-primary btn-sm">新增</button>
-        </form>
-      </div>
-      <div class="row __products"></div>
-    </main>
-  </body>
+          <input id="price" name="price" type="number" min="1" class="col-12 form-control text-right" required />
+          <div class="input-group-append">
+            <span class="input-group-text">元</span>
+          </div>
+          <div class="input-group-append">
+            <span class="input-group-text">新台幣</span>
+          </div>
+        </div>
+        <div class="input-group input-group-sm mb-2">
+          <div class="input-group-prepend">
+            <label for="category" class="input-group-text">商品種類</span>
+          </div>
+          <select name="category" id="category" class="custom-select text-right" required></select>
+        </div>
+        <button type="reset" class="btn btn-secondary btn-sm">重設</button>
+        <button type="submit" class="btn btn-primary btn-sm">新增</button>
+      </form>
+    </div>
+    <div class="row __products"></div>
+  </main>
+</body>
+
 </html>
