--- a/static/index.html
+++ b/static/index.html
@@ -63,7 +63,7 @@
         <button type="submit" class="btn btn-primary btn-sm">新增</button>
       </form>
     </div>
-    <div class="row __products"></div>
+    <div class="row products"></div>
   </main>
 </body>
 
